fix: permission error

--- a/DotnetAspireDemo/DotnetAspireDemo.Angular/src/app/app.component.html
+++ b/DotnetAspireDemo/DotnetAspireDemo.Angular/src/app/app.component.html
@@ -74,7 +74,7 @@
           </tr>
         </tbody>
       </table>
-      <button (click)="storeForecast(forecasts)"></button>
+      <button (click)="storeForecast(forecasts)">Store forecast</button>
       <div>
         {{ storeForecastResult() }}
       </div>
